PipelineEngineBackend/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    namespace: pipeline-engine-staging
spec:
    replicas: 1
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 0
            maxSurge: 1
    selector:
        matchLabels:
            app: backend-deployment
    template:
        metadata:
            labels:
                app: backend-deployment
        spec:
            automountServiceAccountToken: false
            containers:
                -   name: backend-deployment
                    resources:
                        limits:
                            cpu: "400m"
                            memory: "300M"
                        requests:
                            cpu: "250m"
                            memory: "200M"
                    image: "rhaversen/pipeline-engine-backend:9b5dc7fa6a1051b0e6c5145d2c6ef7ae4be0f8a3"
                    imagePullPolicy: Always
                    livenessProbe:
                        httpGet:
                            path: api/service/livez
                            port: 3001
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    readinessProbe:
                        httpGet:
                            path: api/service/readyz
                            port: 3001
                        periodSeconds: 10
                        initialDelaySeconds: 15
                        failureThreshold: 5
                    ports:
                        -   containerPort: 3001
